# cg

./: .gitignore  package-lock.json  package.json
asteroids/: CMakeLists.txt  Disposable.h  app.cpp
asteroids/controller/: AsteroidsController.cpp  AsteroidsController.h
asteroids/model/: Asteroid.cpp  Asteroid.h  AsteroidManager.cpp  AsteroidManager.h  AsteroidsModel.cpp  AsteroidsModel.h  Bullet.h  Constants.h  Movable.h  Moveable.cpp  PlayerModel.cpp  PlayerModel.h
asteroids/view/: AsteroidView.cpp  AsteroidView.h  AsteroidsView.cpp  AsteroidsView.h  BulletView.h  GLApplication.cpp  GLApplication.h  PlayerView.cpp  PlayerView.h  Renderer.h
lw1/ex1/: tsconfig.json  webpack.config.js
lw1/ex1/src/: IDrawable.ts  LetterA.ts  LetterB.ts  LetterK.ts  LetterO.ts  Scene.ts  index.ts  utils.ts
lw1/ex2/: package.json
lw1/ex2/src/: Trolleybus.ts  index.ts
lw2/Alchemy/: README.md
lw2/Alchemy/src/: Component.ts  Disposable.ts  EventDispatcher.ts  Tag.ts  index.ts
lw2/Alchemy/src/Controller/: AlchemyController.ts
lw2/Alchemy/src/Model/: AlchemyElement.ts  AlchemyModel.ts  CombinationRule.ts  ElementsList.ts
lw2/Alchemy/src/View/: AlchemyView.ts  DragManager.ts  ElementView.ts  ExperimentView.ts  IView.ts  ListView.ts
lw3/: CMakeLists.txt  README.md  TetrisController.cpp  TetrisController.h  TetrisModel.cpp  TetrisModel.h  TetrisView.cpp  TetrisView.h  main.cpp
lw3/libgl/: libgl.cpp
lw4/: CMakeLists.txt  Enemy.h  EnemySound.h  MazeController.h  MazeModel.h  MazeView.h  main.cpp  stb_image.h
lw5/: App.h  CMakeLists.txt  Controller.h  Model.h  View.h  main.cpp
lw7/Z/: main.cpp
lw7/Z/shaders/: fragment.glsl  vertex.glsl
lw7/canabis/: CMakeLists.txt  main.cpp
lw7/canabis/shaders/: fragment.glsl  vertex.glsl
lw7/torus/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
lw7/torus/shaders/: fragment.glsl  vertex.glsl
